# Just-Clipboard-Manager

./: CMakeLists.txt  ClipMonitor.cpp  ClipMonitor.h  ClipboardManager.cpp  Init.cpp  README.md
include/: ClipboardManager.h  ClipboardObject.h
src/: init.cpp  loader.cpp  main.cpp  save.cpp
